--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>요금제 변경일 계산기</title>
+    <title>폰드림 요금제 변경일</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h2>요금제 변경일 계산기</h2>
+    <h2>요금제 변경일</h2>
     <h3 id="today"></h3>
     <h3 id="select25per"></h3>
     <h3 id="gong"></h3>
