--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3 id="select25per"></h3>
     <h3 id="gong"></h3>
     <script src="data.js"></script>
+    <script data-ad-client="ca-pub-1830072840530836" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
