--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>폰드림 요금제 변경일</title>
     <link href="style.css" rel="stylesheet">
+    <script data-ad-client="ca-pub-1830072840530836" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <h2>요금제 변경일</h2>
     <h3 id="today"></h3>
     <h3 id="select25per"></h3>
     <h3 id="gong"></h3>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- add -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1830072840530836"
+     data-ad-slot="6259627063"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <script src="data.js"></script>
-    <script data-ad-client="ca-pub-1830072840530836" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
