--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3 id="today"></h3>
     <h3 id="select25per"></h3>
     <h3 id="gong"></h3>
+    <h3 id="internet"></h3>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- add -->
 <ins class="adsbygoogle"
